welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: reassignment to val
while (estSurMessage=true) {
                    ^BDRBuggle:7: error: value avance is not a member of Unit
	avance() avance()
                 ^BDRBuggle:9: error: value avance is not a member of Unit
	avance() avance() avance()
                 ^BDRBuggle:13: error: value recule is not a member of Unit
	recule() recule()
                 ^BDRBuggle:15: error: value recule is not a member of Unit
	recule() recule() recule()
                 ^BDRBuggle:17: error: value avance is not a member of Unit
	droite() avance()
                 ^BDRBuggle:19: error: value avance is not a member of Unit
	gauche() avance()
                 ^